# wam-v-autopilot

./: README.md
waypoints_publisher/waypoints_publisher/: CMakeLists.txt  package.xml
waypoints_publisher/waypoints_publisher/src/: waypoints_publisher.cpp
